--- a/cronometro.html
+++ b/cronometro.html
@@ -7,6 +7,15 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Cronômetro</title>
     <link rel="stylesheet" href="cronometro.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NWN307GST9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NWN307GST9');
+</script>
 </head>
 
 <body>
