--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <section>
-        <div id="contador"><span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span>.<span id="milisegundos">00</span></div>
+     <section>
+        <div id="contador"><span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span></div>
         <div id="botoes">
             <button onclick="reset()" id="reset" class="item">Reset</button>
             <button onclick="stop()" id="stop" class="item">Stop</button>
