--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="description" content="Cronômetro online com horas minutos e segundos">
     <meta name="author" content="Sérgio Júnior">
-    <meta name="keywords" content="cronometro,cronometro online,temporizador,stopwatch,stopwatch online">
+    <meta name="keywords" content="cronometro,cronometro online,temporizador,stopwatch,stopwatch online,netlify">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
