--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="description" content="Cronômetro online com horas minutos e segundos">
+    <meta name="robots" content="index, follow">
     <meta name="author" content="Sérgio Júnior">
     <meta name="keywords" content="cronometro,cronometro online,temporizador,stopwatch,stopwatch online,netlify">
     <meta charset="UTF-8">
