--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Cronômetro</title>
     <link rel="stylesheet" href="cronometro.css">
+    <script data-ad-client="ca-pub-2683859460671203" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NWN307GST9"></script>
 <script>
