--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="description" content="Cronômetro online com horas minutos e segundos">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Sérgio Júnior">
-    <meta name="keywords" content="cronometro,cronometro online,temporizador,stopwatch,stopwatch online,netlify">
+    <meta name="keywords" content="cronometro,cronometro online,temporizador,stopwatch,stopwatch online">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Cronômetro</title>
+    <title>Cronômetro Online</title>
     <link rel="stylesheet" href="cronometro.css">
     <script data-ad-client="ca-pub-2683859460671203" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
