--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <header></header>
      <section>
         <div id="contador"><span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span></div>
         <div id="botoes">
