--- a/index.html
+++ b/index.html
@@ -31,6 +31,32 @@
             <button onclick="stop()" id="stop" class="item">Stop</button>
             <button class="startt" id="start">Start</button>
         </div>
+
+        <p>Sobre este cronômetro</p>
+        <div id="about" class="about">
+        <h3>Como usar o cronômetro?</h3>
+        Para usar o cronômetro é bem fácil,
+        para iniciar o cronômetro basta clicar no botão <strong>start</strong>,
+        para pausar clique no botão <strong>stop</strong> e
+        para reiniciar basta clicar em <strong>reset</strong>.
+
+        <h3>O que é um crônometro?</h3>
+        Um cronômetro é um instrumento para medir uma certa quantidade
+        de tempo que pode ser em <strong>horas, minutos,segundos</strong> etc...<br>
+        Este cronômetro consegue medir o tempo em <strong>segundos, minutos e horas!</strong><br>
+        Uma <strong>hora</strong> tem 60 <strong>minutos</strong>.<br>
+        Um <strong>minuto</strong> tem 60 <strong>segundos</strong> e<br>
+        um <strong>segundo</strong> tem 1000 <strong>milissegundos</strong>.
+        <h3>História do cronômetro</h3>
+        O termo <strong><i>chronometer</i></strong> foi originalmente cunhado por Jeremy Thacker de Beverley,
+        na Inglaterra em 1714, para se referir a sua invenção de um relógio instalado
+        em uma câmara de vácuo, utilizado para auxiliar a navegação ao determinar rotas
+        marítimas mais seguras e precisas através da utilização das estrelas para navegação
+        noturna e para determinar a longitude.
+        O cronômetro no formato que conhecemos hoje surgiu na década de 1860 a partir de evoluções
+        do cronômetro original realizadas pelas empresas Seiko e Tag Heuer.<br>
+        Texto de: <a href="https://pt.wikipedia.org/wiki/Cron%C3%B4metro" target="_blank" rel="external">Wikipedia</a>.
+        </div>
     </section>
     <script src="cronometro.js"></script>
 </body>
