--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="startt" id="start">Start</button>
         </div>
 
-        <p>Sobre este cronômetro</p>
+        <p>Sobre este cronômetro ></p>
         <div id="about" class="about">
         <h3>Como usar o cronômetro?</h3>
         Para usar o cronômetro é bem fácil,
