--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Cronômetro Online</title>
     <link rel="stylesheet" href="cronometro.css">
-    
+
     <script data-ad-client="ca-pub-2683859460671203" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -28,7 +28,8 @@
 <body>
     <main>
         <div id="contador" class="divContador">
-            <span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span>
+            <span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span><span
+                class="spanMilissegundos">.</span><span id="milissegundos" class="spanMilissegundos">000</span>
         </div>
 
         <div id="botoes">
