Coloquei o link do temporizador

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <button onclick="ativar()" id="btnStart" class="botoes btnStart">Start</button>
         </div>
     </main>
+     <footer>
+        <a href="https://temporizador-online.netlify.app" target="_blank">Temporizador Online</a>
+    </footer>
     <script src="cronometro.js"></script>
 </body>
 
