--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Sérgio Júnior">
     <meta name="keywords" content="cronometro,cronometro online,temporizador,stopwatch,stopwatch online">
+    <meta name="google-site-verification" content="egNiWxHl80GaQ2piJngZ_5MUByjcEv0ywkL_tkPyYt0" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
