--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="google-site-verification" content="egNiWxHl80GaQ2piJngZ_5MUByjcEv0ywkL_tkPyYt0" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Cronômetro Online</title>
     <link rel="stylesheet" href="cronometro.css">
 
