--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 
 <head>
-    <meta name="description" content="Cronômetro online com horas minutos e segundos">
+    <meta name="description" content="Cronômetro online pra marcar um intervalo de tempo com horas, minutos e segundos!">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Sérgio Júnior">
-    <meta name="keywords" content="cronometro,cronometro online,temporizador,stopwatch,stopwatch online">
+    <meta name="keywords" content="cronômetro,cronometro online,temporizador,stopwatch,stopwatch online">
     <meta name="google-site-verification" content="egNiWxHl80GaQ2piJngZ_5MUByjcEv0ywkL_tkPyYt0" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
