--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <meta name="description" content="Cronômetro online pra marcar um intervalo de tempo com horas, minutos e segundos!">
+    <meta name="description" content="Cronômetro online com MILISSEGUNDOS, SEGUNDOS, MINUTOS e HORAS para te ajudar a marcar um intervalo de tempo, como cronometrar o tempo de uma comida no forno, o tempo de uma caminhada e muito mais!!">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Sérgio Júnior">
     <meta name="keywords" content="cronômetro,cronometro online,temporizador,stopwatch,stopwatch online">
